fix width on small screens

--- a/docs/assets/css/styles.css
+++ b/docs/assets/css/styles.css
@@ -1466,6 +1466,10 @@ body:not(.home) .navbar-link:before {
   #features-container {
     margin-bottom: 10em;
   }
+  #features-container #github-wrapper {
+    margin-left: -10em;
+    width: 20em;
+  }
   #docs-wrapper {
     position: inherit;
   }
